force-app/main/default/objects/Janati_RR__Round_Robin_Error__c/fields/Janati_RR__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Error_Details__c</fullName>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>