force-app/main/default/objects/Janati_RR__Round_Robin_Error__c/fields/Janati_RR__Lead__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populated only if the error is directly related to the lead object</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Round Robin Errors</relationshipLabel>
    <relationshipName>Round_Robin_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>