force-app/main/default/objects/Janati_RR__Round_Robin_Error__c/fields/Janati_RR__Subject__c.field-meta.xml
<CustomField>
    <fullName>Janati_RR__Subject__c</fullName>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>